--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,6 +36,7 @@
             {% else %}
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                <a class="nav-item nav-link" id="home" href="/">Home</a>
             {% endif %}
         </div>
       </div>
